--- a/index.html
+++ b/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consulta de Alunos</title>
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="./index.js" defer=""></script>
-    <link rel="stylesheet" href="./index.css">
-  </head>
-
-  <body>
+</head>
+<body>
     <div class="container">
-      <h1>Consulta de Alunos</h1>
+        <h1>Consulta de Alunos</h1>
 
-      <div class="search-section">
-        <label for="nomeAluno">Buscar por Nome:</label>
-        <input type="text" id="nomeAluno" placeholder="Digite o nome do aluno">
-        <button id="searchButton">Buscar</button>
-        <button id="clearSearchButton">Limpar Busca</button>
-        <button id="showAllButton">Mostrar Todos</button>
-      </div>
+       <div class="search-section">
+            <label for="nomeAluno">Buscar por Nome:</label>
+            <input type="text" id="nomeAluno" placeholder="Digite o nome do aluno" class="inputs">
 
-      <div class="results-container">
-        <table id="alunosTable">
-          <thead>
-            <tr>
-              <th>Nome</th>
-              <th>Faltas</th>
-              <th>Nota 1</th>
-              <th>Nota 2</th>
-              <th>Nota 3</th>
-              <th>Média</th>
-              <th>Situação</th>
-              <th>Origem</th>
-            </tr>
-          </thead>
-          <tbody>
-          </tbody>
-        </table>
-        <p id="noResults" class="hidden">Nenhum aluno encontrado.</p>
-      </div>
+            <label for="filtroOrigem" class="inputs">Filtrar por Curso:</label> <select id="filtroOrigem">
+                <option value="">Todos</option> 
+                <option value="PWT">PWT</option>
+                <option value="PWN">PWN</option>
+            </select>
+
+            <button id="searchButton">Buscar</button>
+            <button id="clearSearchButton">Limpar Busca</button>
+            <button id="showAllButton">Mostrar Todos</button>
+        </div>
+
+        <div class="results-container">
+            <table id="alunosTable">
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Faltas</th>
+                        <th>Nota 1</th>
+                        <th>Nota 2</th>
+                        <th>Nota 3</th>
+                        <th>Média</th>
+                        <th>Situação</th>
+                        <th>Origem</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    </tbody>
+            </table>
+            <p id="noResults" class="hidden">Nenhum aluno encontrado.</p>
+        </div>
     </div>
 
     <script src="script.js"></script>
-
-  </body>
-
+</body>
 </html>
