--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                     <tr>
                         <th>Nome</th>
                         <th>Faltas</th>
-                        <th>Nota 1</th>
-                        <th>Nota 2</th>
-                        <th>Nota 3</th>
+                         <th>Nota 1º Bimestre</th>
+                        <th>Nota 2º Bimestre</th>
+                        <th>Nota 3º Bimestre</th>
                         <th>Média</th>
                         <th>Situação</th>
                         <th>Origem</th>
