--- a/index.html
+++ b/index.html
@@ -1,159 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<div id="registrationModal" class="modal hidden">
+    <div class="modal-content">
+        <span id="closeDetail" class="close-button">&times;</span> 
+        <h2>Registrar Presença e Notas</h2>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Consulta de Alunos</title>
-  <link rel="stylesheet" href="style.css">
-
-  <script src="script.js" defer></script>
-</head>
-
-<body>
-  <div class="container">
-    <h1>Consulta de Alunos</h1>
-
-    <button id="registerButton" class="icon-button" title="Registrar Presença e Notas">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"/>
-        </svg>
-        <span>Registrar</span>
-    </button>
-        <div class="search-section">
-      <div class="filter-group"> <label for="nomeAluno">Buscar por Nome:</label>
-        <input type="text" id="nomeAluno"  placeholder="Digite o nome do aluno">
-      </div>
-
-      <div class="filter-group"> 
-        <label for="filtroPeriodo">Filtrar por Período:</label>
-        <select id="filtroPeriodo">
-          <option value="">Todos</option>
-          <option value="Tarde">Tarde</option>
-          <option value="Noite">Noite</option>
-        </select>
-      </div>
-
-      <div class="filter-group"> 
-        <label for="filtroOrigem">Filtrar por Curso:</label>
-        <select id="filtroOrigem">
-          <option value="">Todos</option>
-          <option value="PWT">PROGRAMAÇÃO TARDE</option>
-          <option value="PWN">PROGRAMAÇÃO NOITE</option>
-          <option value="DGT">DESIGNER TARDE</option>
-          <option value="DGN">DESIGNER NOITE</option>
-          <option value="MNT">MANICURE TARDE</option>
-          <option value="MNN">MANICURE NOITE</option>
-        </select>
-      </div>
-
-      <div id="buttons">
-        <button id="searchButton">Buscar</button>
-        <button id="clearSearchButton">Limpar Busca</button>
-        <button id="showAllButton">Mostrar Todos</button>
-      </div>
-    </div>
-
-    <div class="results-container">
-      <table id="alunosTable">
-        <thead>
-          <tr>
-            <th>Nome</th>
-            <th>Faltas</th>
-            <th>Nota 1º Bimestre</th>
-            <th>Nota 2º Bimestre</th>
-            <th>Nota 3º Bimestre</th>
-            <th>Média</th>
-            <th>Situação</th>
-            <th>Origem</th>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
-      <p id="noResults" class="hidden">Nenhum aluno encontrado.</p>
-    </div>
-  </div>
-
-    <div id="registrationModal" class="modal hidden">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <h2>Registrar Presença e Notas</h2>
-
-            <div class="form-section">
-                <h3>Selecionar Aluno</h3>
-                <div class="filter-group"> 
-                    <label for="filtroPeriodoModal">Filtrar por Período:</label>
-                    <select id="filtroPeriodoModal" class="full-width-input">
-                        <option value="">Todos</option>
-                        <option value="Tarde">Tarde</option>
-                        <option value="Noite">Noite</option>
-                    </select>
-                </div>
-
-                <div class="filter-group"> 
-                    <label for="filtroOrigemModal">Filtrar por Curso:</label>
-                    <select id="filtroOrigemModal" class="full-width-input">
-                        <option value="">Todos</option>
-                        <option value="PWT">PROGRAMAÇÃO TARDE</option>
-                        <option value="PWN">PROGRAMAÇÃO NOITE</option>
-                        <option value="DGT">DESIGNER TARDE</option>
-                        <option value="DGN">DESIGNER NOITE</option>
-                        <option value="MNT">MANICURE TARDE</option>
-                        <option value="MNN">MANICURE NOITE</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="alunoSelecionado">Aluno:</label>
-                    <select id="alunoSelecionado" class="full-width-input">
-                        <option value="">Selecione um aluno</option>
-                    </select>
-                </div>
-            </div>
-
-            <hr class="form-separator">
-
-            <div class="form-section">
-                <h3>Registrar Presença</h3>
-                <div class="form-group">
-                    <label for="dataPresenca">Data:</label>
-                    <input type="date" id="dataPresenca" class="full-width-input">
-                </div>
-                <div class="form-group status-radio-group">
-                    <label>Status:</label>
-                    <div>
-                        <input type="radio" id="presente" name="statusPresenca" value="P" checked> 
-                        <label for="presente">Presente</label>
-                    </div>
-                    <div>
-                        <input type="radio" id="ausente" name="statusPresenca" value="A"> 
-                        <label for="ausente">Ausente</label>
-                    </div>
-                </div>
-                <button id="submitPresenca" class="form-button">Registrar Presença</button>
-            </div>
-
-            <hr class="form-separator">
-
-            <div class="form-section">
-                <h3>Atualizar Notas</h3>
-                <div class="form-group">
-                    <label for="nota1">1º Bimestre:</label>
-                    <input type="number" id="nota1" step="0.1" min="0" max="10" class="full-width-input">
-                </div>
-                <div class="form-group">
-                    <label for="nota2">2º Bimestre:</label>
-                    <input type="number" id="nota2" step="0.1" min="0" max="10" class="full-width-input">
-                </div>
-                <div class="form-group">
-                    <label for="nota3">3º Bimestre:</label>
-                    <input type="number" id="nota3" step="0.1" min="0" max="10" class="full-width-input">
-                </div>
-                <button id="submitNotas" class="form-button">Atualizar Notas</button>
-            </div>
-
-            <p id="feedbackMessage" class="hidden feedback-message"></p>
         </div>
-    </div>
-    </body>
-</html>
+</div>
