--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
         </div>
     </div>
 
+    <button id="registerButton" title="Registrar">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-check" viewBox="0 0 16 16">
+            <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m1.679-4.493-1.335 2.214a.5.5 0 0 1-.753.116l-.882-.882a.5.5 0 1 1 .707-.707l.646.647 1.179-1.875a.5.5 0 1 1 .858.534ZM11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"/>
+            <path d="M8.256 14.995c.57-.16.96-.544 1.144-.99.5-.99.47-2.31.252-3.282A3.5 3.5 0 0 0 8 10.5a3.5 3.5 0 0 0-4.752-3.377c-.218.972-.248 2.292.251 3.282.184.445.574.83 1.144.99M3 13.5a.5.5 0 0 1-.5-.5.5.5 0 0 0-.5-.5.5.5 0 0 1-.5-.5.5.5 0 0 0-.5-.5.5.5 0 0 1-.5-.5.5.5 0 0 0-.5-.5.5.5 0 0 1-.5-.5.5.5 0 0 0-.5-.5c.08-.094.125-.1.147-.1h3.364c.254 0 .524.024.795.06M2.5 14a.5.5 0 0 0-.5.5V15h-.5a.5.5 0 0 0 0 1H13a.5.5 0 0 0 0-1h-.5v-.5a.5.5 0 0 0-.5-.5H2.5Z"/>
+        </svg>
+        <span>Registrar</span>
+    </button>
+
+
     <div id="registrationModal" class="modal hidden">
         <div class="modal-content">
             <span id="closeRegistrationModalButton" class="close-button">&times;</span>
